--- a/pc.css
+++ b/pc.css
@@ -8,7 +8,7 @@
 
   --color-2: #e3f1af; /* */
 
-  --color-3: #4bc84b; /* main color */
+  --color-3: #7b00ff; /* main color */
 
   --color-4: #71da35; /* sub  color */
 
