--- a/pc.css
+++ b/pc.css
@@ -4,15 +4,15 @@
 
 
 
-  --color-1: #cceecc; /* */
+  --color-1: #7b00ff; /* */
 
-  --color-2: #e3f1af; /* */
+  --color-2: #7b00ff; /* */
 
   --color-3: #7b00ff; /* main color */
 
-  --color-4: #71da35; /* sub  color */
+  --color-4: #7b00ff; /* sub  color */
 
-  --color-5: #cff1af; /* */
+  --color-5: #7b00ff; /* */
 
 }
 
