--- a/setting.css
+++ b/setting.css
@@ -13,6 +13,6 @@
   --logo-size-mobile: 90px 32px;
 
   --icon-URL: url("");
-  --pre-comment: "숨쉬고 계신 ";
+  --pre-comment: "여기 계신 ";
   --sub-comment: "명 살아계신가요?!";
 }
