--- a/setting.css
+++ b/setting.css
@@ -7,7 +7,7 @@
   --color-4: #71da35; /* sub  color */
   --color-5: #cff1af; /* */
 
-  --logo-URL: url("https://sum2424.github.io/css/source/sum.png");
+  --logo-URL: url("https://sum2424.github.io/css/source/sum2.png");
   --logo-Width: 158px;
   --logo-Height: 50px;
   --logo-size-mobile: 90px 32px;
