--- a/count.css
+++ b/count.css
@@ -8,7 +8,7 @@
 
 #board-info #viewers-area #viewers:before {
 
-    content: "숨게더 이용자";    /* 숫자 앞에 들어갈 문구 */
+    content: "숨게더 이용자 ";    /* 숫자 앞에 들어갈 문구 */
 
         /* ex) content: "트수 "; */
 
@@ -22,7 +22,7 @@
 
 #board-info #viewers-area #viewers:after {
 
-    content: "명";    /* 숫자 뒤에 들어갈 문구 */
+    content: "명 사용중";    /* 숫자 뒤에 들어갈 문구 */
 
         /* ex) content: "명 접속중"; */
 
